--- a/Reactjs/myapp/src/app.css
+++ b/Reactjs/myapp/src/app.css
@@ -1,9 +1,3 @@
-nav{
+/* .test{
     background-color: aqua;
-    display: flex;
-    justify-content: space-around;
-}
-.home{
-    font-size: 40px;
-}
-
+} */
